--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
 {
   "name": "react-native-shine-button",
   "version": "0.0.1",
-  "description": "React Native Bridge for ChadCSong/ShineButton & imwcl/WCLShineButton",
+  "description":
+    "React Native Bridge for ChadCSong/ShineButton & imwcl/WCLShineButton",
   "main": "RNShineButton.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prscX/react-native-shine-button.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "react-native"
-  ],
+  "keywords": ["react-native"],
   "author": "Pranav Raj Singh Chauhan",
   "devDependencies": {
     "prettier-pack": "0.0.4"
