--- a/ShineButtonExample/.vscode/settings.json
+++ b/ShineButtonExample/.vscode/settings.json
@@ -1,7 +1,1 @@
-{
-  "editor.formatOnSave": true,
-  "prettier.eslintIntegration": true,
-  "prettier.singleQuote": true,
-  "prettier.semi": false,
-  "prettier.bracketSpacing": true
-}
+{"editor.formatOnSave":true,"prettier.eslintIntegration":true,"prettier.singleQuote":true,"prettier.semi":false,"prettier.bracketSpacing":true}
