- renaming example project - hot fix for size on android - hot fix for android issue 1

--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -106,6 +106,9 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        jackOptions {
+            enabled true
+        }
     }
     splits {
         abi {
