--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -139,7 +139,24 @@ android {
     }
 }
 
+
+buildscript {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+
+}
+
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':react-native-shine-button')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:25.1.1"
