--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'ShineButtonExample'
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 include ':react-native-shine-button'
 project(':react-native-shine-button').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-shine-button/android')
 
