--- a/android/bin/build.gradle
+++ b/android/bin/build.gradle
@@ -35,6 +35,6 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-//    compile 'com.sackcentury:shinebutton:d992d780328ae8ccce3e9ea4acfeef69186986d3'
-    compile 'com.github.prscX:ShineButton:0.2.1'
+   compile 'com.sackcentury:shinebutton:d992d780328ae8ccce3e9ea4acfeef69186986d3'
+    // compile 'com.github.prscX:ShineButton:0.2.1'
 }
