--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
 target 'RNShineButton' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
@@ -8,4 +8,14 @@ target 'RNShineButton' do
   # Pods for RNShineButton
 
   pod 'WCLShineButton',:git => 'https://github.com/prscX/WCLShineButton.git', :commit =>'ddd4deb'
+
+  post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      if target.name.include?('WCLShineButton')
+        target.build_configurations.each do |config|
+          config.build_settings['SWIFT_VERSION'] = '4.1'
+        end
+      end
+    end
+  end
 end
