--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
-
 {
   "name": "react-native-shine-button",
   "version": "0.0.10",
-  "description":
-    "React Native Bridge for ChadCSong/ShineButton & imwcl/WCLShineButton",
+  "description": "React Native Bridge for ChadCSong/ShineButton & imwcl/WCLShineButton",
   "main": "js/RNShineButton.js",
   "repository": {
     "type": "git",
@@ -13,10 +11,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node scripts/installer.js"
   },
-  "keywords": ["react-native"],
+  "keywords": [
+    "react-native"
+  ],
   "author": "Pranav Raj Singh Chauhan",
   "dependencies": {
-    "react-native-vector-icons": "4.6.0"
+    "react-native-vector-icons": "^4.6.0"
   },
   "devDependencies": {
     "prettier-pack": "0.0.6"
