--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,7 +1,3 @@
-rootProject.name = 'ShineButtonExample'
-include ':react-native-vector-icons'
-project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
-include ':react-native-shine-button'
-project(':react-native-shine-button').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-shine-button/android')
-
+rootProject.name = 'Example'
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
