--- a/Example/package.json
+++ b/Example/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "ShineButtonExample",
+  "name": "Example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.3.1",
-    "react-native": "0.55.4",
+    "react": "16.9.0",
+    "react-native": "0.61.5",
+    "react-native-vector-icons": "6.6.0",
     "react-native-shine-button": "../"
   },
   "devDependencies": {
-    "babel-jest": "22.0.6",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.0.6",
-    "react-test-renderer": "16.2.0",
-    "prettier-pack": "0.0.7"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
