--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-native-shine-button",
-  "version": "0.0.12",
+  "version": "1.0.0",
   "description": "React Native Bridge for ChadCSong/ShineButton & imwcl/WCLShineButton",
   "main": "js/RNShineButton.js",
+  "homepage": "https://github.com/prscX/react-native-shine-button.git",
   "repository": {
     "type": "git",
     "url": "https://github.com/prscX/react-native-shine-button.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node scripts/installer.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "react-native"
