--- a/Example/package.json
+++ b/Example/package.json
@@ -13,6 +13,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-vector-icons": "6.6.0",
+    "react-native-image-helper": "0.0.2",
     "react-native-shine-button": "../"
   },
   "devDependencies": {
